--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <img src="Logo.jpg" style="float: left" width="150px" height="150px" />
         
        <br><br><br><br><br><br><br><br><br><br>
+        <style type="text/css"> body{background-image: url(Fond1.jpg)}
+        </style>
          
         <p style=" font-size: 35px; color: lime">
              DALAL AK JÀMM <br> XAM SAY FARATA
