--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div style="text-align: center"> 
              <a href="index2.html"> <button> <h4>FARATAY JULLI</h4></button></a> 
             <a href="index3.html"> <button> <h4>SUNAY JULLI </h4></button></a> 
-            <a href="index4.html"> <button> <h4>NGENEELI JULLI</h4></button></a> 
+            <a href="index4.html"> <button> <h4>NGËNEELI JULLI</h4></button></a> 
         
         </div>
         
