--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <body>
        
         
-         <div style="text-align: center"><a href="index.html"> <button> <h4>DAL BI</h4></button></a>
+         <div style="text-align: center ; font-size: 40px;"><a href="index.html"> <button> <h4>DAL BI</h4></button></a>
              <a href="index3.html"> <button> <h4>SUNAY JULLI</h4></button></a> 
             <a href="index4.html"> <button> <h4>NGENEELI JULLI</h4></button></a> 
         </div>
