--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <body>
           <img src="Logo.jpg" style="float: left" width="150px" height="150px" />
-        <div style="text-align: center"> 
+        <div style="text-align: center; font-size: 40px;"> 
              <a href="index2.html"> <button> <h2>FARATAY JULLI</h2></button></a> 
             <a href="index3.html"> <button> <h2>SUNAY JULLI </h2></button></a> 
             <a href="index4.html"> <button> <h2>NGËNEELI JULLI</h2></button></a> 
