--- a/index4.html
+++ b/index4.html
@@ -7,7 +7,7 @@
      
     <body>
         
-         <div style="text-align: center"><a href="index.html"> <button> <h4>DAL BI</h4></button></a> 
+         <div style="text-align: center; font-size: 40px "><a href="index.html"> <button> <h4>DAL BI</h4></button></a> 
             <a href="index2.html"> <button> <h4>FARATAY JULLI</h4></button></a> 
             <a href="index3.html"> <button> <h4>SUNAY JULLI</h4></button></a> 
         </div>
