--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <body>
           <img src="Logo.jpg" style="float: left" width="150px" height="150px" />
-        <div style="text-align: center; font-size: 40px;"> 
+        <div style="text-align: center; font-size: 40px"> 
              <a href="index2.html"> <button> <h2>FARATAY JULLI</h2></button></a> 
             <a href="index3.html"> <button> <h2>SUNAY JULLI </h2></button></a> 
             <a href="index4.html"> <button> <h2>NGËNEELI JULLI</h2></button></a> 
@@ -23,7 +23,7 @@
           <h1 style=" text-align: center ;color: green"> DALAL AK JÀMM <br> XAM SAY FARATA</h1>
 
        <br><br><br> 
-        <div style="text-align: center"> <audio controls="controls">
+        <div style="text-align: center ; font-size: 40px"> <audio controls="controls">
                  <source src="Dalal.wav"> 
              </audio> </div>
       
