--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h1 style=" text-align: center ;color: green"> DALAL AK JÀMM <br> XAM SAY FARATA</h1>
 
        <br><br><br> 
-        <div style="text-align: center ; font-size: 40px"> <audio controls="controls">
+        <div style="text-align: center "> <audio controls="controls ; font-size: 40px">
                  <source src="Dalal.wav"> 
              </audio> </div>
       
