--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h1 style=" text-align: center ;color: green"> DALAL AK JÀMM <br> XAM SAY FARATA</h1>
 
        <br><br><br> 
-        <div style="text-align: center "> <audio controls="controls ; font-size: 40px">
+        <div style="text-align: center "> <audio controls="controls ">
                  <source src="Dalal.wav"> 
              </audio> </div>
       
@@ -41,11 +41,11 @@
     <br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br> 
     <br><br><br><br><br><br><br><br><br>
        <br><br><br> <b></b> <br><br><br> 
     <br><br><br><br><br><br><br><br>
-       <br><br><br> <b></b> <br><br><br>
+       <br><br><br> <b></b> <br><br>
     
      <footer>
          <hr>
