--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
         
          <div style="text-align: center ; font-size: 40px;"><a href="index.html"> <button> <h2>DAL BI</h2></button></a>
              <a href="index3.html"> <button> <h2>SUNAY JULLI</h2></button></a> 
-            <a href="index4.html"> <button> <h2>NGENEELI JULLI</h2></button></a> 
+            <a href="index4.html"> <button> <h2>NGËNEELI JULLI</h2></button></a> 
         </div>
         <br> <br> 
         
