--- a/index3.html
+++ b/index3.html
@@ -11,7 +11,7 @@
          <div style="text-align: center; font-size: 40px; ">
             <a href="index.html"> <button> <h2>DAL BI</h2></button></a> 
             <a href="index2.html"> <button> <h2>FARATAY JULLI</h2></button></a> 
-            <a href="index4.html"> <button> <h2>NGENEELI JULLI</h2></button></a> 
+            <a href="index4.html"> <button> <h2>NGËNEELI JULLI</h2></button></a> 
         </div>
         <br> <br> 
         
