--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
         
          <style type="text/css"> body{background-image: url(Fond2.jpg); background-size: cover}
         </style>
-        <h1 style=" text-align: center ;color: green"> DALAL AK JÀMM <br> XAM SAY FARATA <br> NGENEELI JULLI</h1>
+        <h1 style=" text-align: center ;color: green"> DALAL AK JÀMM <br> XAM SAY FARATA <br> FARATAY JULLI</h1>
          <div style="text-align: center"> <audio controls="controls">
                  <source src="Faratayjulli.wav"> 
              </audio> </div>
