--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
              <a href="index2.html"> <button> <h2>FARATAY JULLI</h2></button></a> 
             <a href="index3.html"> <button> <h2>SUNAY JULLI </h2></button></a> 
             <a href="index4.html"> <button> <h2>NGËNEELI JULLI</h2></button></a> 
+            <button onclick="window.close()">Quitter</button>
         
         </div>
         
