--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,7 @@
          <div style="text-align: center ; font-size: 40px;"><a href="index.html"> <button> <h2>DAL BI</h2></button></a>
              <a href="index3.html"> <button> <h2>SUNAY JULLI</h2></button></a> 
             <a href="index4.html"> <button> <h2>NGËNEELI JULLI</h2></button></a> 
+             <button onclick="window.close()"> <h2>  Quitter</h2>  </button>
         </div>
         <br> <br> 
         
