--- a/index4.html
+++ b/index4.html
@@ -11,7 +11,7 @@
              <a href="index.html"> <button> <h2>DAL BI</h2></button></a> 
             <a href="index2.html"> <button> <h2>FARATAY JULLI</h2></button></a> 
             <a href="index3.html"> <button> <h2>SUNAY JULLI</h2></button></a> 
-             <button onclick="window.close()"> <h2>  Quitter</h2>  </button>
+             <button onclick="window.close()"> <h2> GÉNN </h2>  </button>
         </div>
         
         <br> <br> 
