--- a/index3.html
+++ b/index3.html
@@ -12,7 +12,7 @@
             <a href="index.html"> <button> <h2>DAL BI</h2></button></a> 
             <a href="index2.html"> <button> <h2>FARATAY JULLI</h2></button></a> 
             <a href="index4.html"> <button> <h2>NGËNEELI JULLI</h2></button></a> 
-             <button onclick="window.close()"> <h2>  Quitter</h2>  </button>
+             <button onclick="window.close()"> <h2> GÉNN </h2>  </button>
         </div>
         <br> <br> 
         
