--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
              <a href="index2.html"> <button> <h2>FARATAY JULLI</h2></button></a> 
             <a href="index3.html"> <button> <h2>SUNAY JULLI </h2></button></a> 
             <a href="index4.html"> <button> <h2>NGËNEELI JULLI</h2></button></a> 
-            <button> <h2 onclick="window.close()" > GÉNN </h2>  </button>
+            <a herf="onclick="window.close()" > <button> <h2> GÉNN </h2>  </button></a>
         
         </div>
         
