--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <style type="text/css"> body{background-image: url(Fond1.jpg); background-size: cover}
         </style>
             
-        <p style=" font-size: 35px; color: lime">
+        <p style=" font-size: 35px; color: blue">
         Waxtaan ci Lenn ci njariñal Salaatu'alaa Nabi 👇🏼<br>
 
 Assalaamu hallaykum wa rahmatul laahi tahaala wa barakaatuhuu kon bu ko defee daniy am mbégte di àndaat ak yéen ci njariñal julli ci Yónnent bi XMM. <br>
